--- a/contact.html
+++ b/contact.html
@@ -683,6 +683,43 @@
     </style>
   </head>
   <body>
+    <div id="preloader">
+      <div class="preloader-content">
+        <div class="preloader-logo">CAA</div>
+        <div class="preloader-circles">
+          <span></span><span></span><span></span><span></span>
+        </div>
+      </div>
+      <style>
+    /* Preloader Styles */ #preloader { position: fixed; top: 0; left: 0; width:
+    100vw; height: 100vh; background: rgba(44,47,52,0.92); z-index: 9999;
+    display: flex; align-items: center; justify-content: center; transition:
+    opacity 0.4s; } .preloader-content { display: flex; flex-direction: column;
+    align-items: center; justify-content: center; } .preloader-logo { font-size:
+    2.8rem; font-family: 'PFDinTextPro-Bold', Arial, sans-serif; color: #fff;
+    margin-bottom: 36px; letter-spacing: -2px; font-weight: bold; }
+    .preloader-circles { display: flex; gap: 18px; } .preloader-circles span {
+    display: block; width: 18px; height: 18px; border-radius: 50%; background:
+    red; opacity: 0.7; animation: preloader-bounce 1.2s infinite
+    cubic-bezier(.4,0,.2,1); } .preloader-circles span:nth-child(2) {
+    animation-delay: 0.2s; } .preloader-circles span:nth-child(3) {
+    animation-delay: 0.4s; } .preloader-circles span:nth-child(4) {
+    animation-delay: 0.6s; } @keyframes preloader-bounce { 0%, 100% { transform:
+    translateY(0); opacity: 0.7; } 50% { transform: translateY(-22px); opacity:
+    1; } }</style>
+    
+  <script>
+    window.addEventListener("DOMContentLoaded", function () {
+      setTimeout(function () {
+        document.getElementById("preloader").style.opacity = 0;
+        setTimeout(function () {
+          document.getElementById("preloader").style.display = "none";
+          document.querySelector(".main-container").style.opacity = 1;
+        }, 400);
+      }, 1200);
+    });
+  </script>
+    </div>
     <!-- Hero Section -->
     <div class="hero-container">
       <div class="hero-bg"></div>
